--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/add.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/add.hbs
@@ -104,28 +104,32 @@
                                     </div>
                                 </div>
                             {{/if}}
-                            <div class="form-group">
-                                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-                                    <label for="input-groupname" class="control-label">{{i18n "groups.name"}}
-                                        <span class="requiredAstrix"> *</span></label>
-                                    <input class="form-control" name="input-groupname" id="input-groupname"
-                                           placeholder="Group Name" type="text">
-                                    {{#defineZone "groupExistsError-area"}}
-                                        <div id="groupExistsError">
-                                            <!-- Here is generated content for error when group already exists -->
-                                        </div>
-                                    {{/defineZone}}
+                            {{#each profile.groupClaims}}
+                                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                    {{#if required}}
+                                        <label class="control-label"
+                                               for={{claimLabel}}>{{i18n (stringFormat "%s%s" "group.claim." claimLabel)}}
+                                            <span>*</span></label>
+                                        <input type={{#if dataType}}{{dataType}}{{else}}"text"{{/if}}
+                                                name={{claimURI}} id={{claimLabel}}
+                                                class="form-control"
+                                                pattern={{#if regex}}{{regex}}{{/if}}
+                                                        placeholder={{i18n (stringFormat "%s%s" "group.placeholder." claimLabel)}}
+                                                required/></br>
+                                    {{else}}
+                                        <label class="control-label"
+                                               for={{claimLabel}}>{{i18n (stringFormat "%s%s" "group.claim." claimLabel)}}</label>
+                                        <input type={{#if dataType}}{{dataType}}{{else}}"text"{{/if}}
+                                                name={{claimURI}} id={{claimLabel}}
+                                                class="form-control"
+                                                pattern={{#if regex}}{{regex}}{{/if}}
+                                                        placeholder={{i18n (stringFormat "%s%s" "group.placeholder." claimLabel)}} /></br>
+                                    {{/if}}
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
-                                    <label for="input-description" class="control-label">{{i18n "groups.description"}}
-                                    </label>
-                                    <input class="form-control" name="input-description" id="input-description"
-                                           placeholder="Group Description"
-                                           type="text">
-                                </div>
-                            </div>
+                            {{else}}
+                                {{log "No Defined Claims for the 'group profile'!" level="error"}}
+                                <p class="empty">{{i18n "group.add.no.content"}}</p>
+                            {{/each}}
                         </div>
                     </div>
                 </div>
