Add group done with accordian view.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/add.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/add.hbs
@@ -144,7 +144,9 @@
                     </div>
                     <div id="accordion5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
                         <div class="panel-body">
-                            Assign users
+                            <div class="message message-info">
+                                <h4><i class="icon fw fw-info"></i>{{i18n "no-users.header"}}</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
