--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/add.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/add.hbs
@@ -69,11 +69,11 @@
                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                     <label for="verificationSelector" class="control-label">{{i18n "users.add.selectMethod"}}
                         <span class="requiredAstrix"> *</span></label>
-                    <select class="form-control" id="verificationSelector">
-                        <option>{{i18n "users.add.select.with.password"}}</option>
-                        <option>{{i18n "users.add.select.with.email.and.askPassword"}}</option>
-                        <option>{{i18n "users.add.select.with.otp.and.askPassword"}}</option>
-                        <option>{{i18n "users.add.select.with.email.or.phone"}}</option>
+                    <select class="form-control" id="verificationSelector" name="verificationSelector">
+                        <option name="withPassword" value="with_password">{{i18n "users.add.select.with.password"}}</option>
+                        <option name="askPassword" value="ask_password">{{i18n "users.add.select.with.email.and.askPassword"}}</option>
+                        <option name="otp" value="otp">{{i18n "users.add.select.with.otp.and.askPassword"}}</option>
+                        <option name="emailOrPhone" value="email_or_phone">{{i18n "users.add.select.with.email.or.phone"}}</option>
                     </select>
                 </div>
             </div>
