Adding internationalization to error messages

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -14,6 +14,15 @@
         <i class="icon fw fw-success"></i>
         {{message}}
     </div>
+{{else}}
+    <div class="alert alert-danger" role="alert">
+        {{i18n message number}}
+        <button type="errorButton" class="close" aria-label="close" data-dismiss="alert">
+            <span aria-hidden="true">
+                <i class="fw fw-cancel"></i>
+        </span>
+        </button>
+    </div>
 {{/if}}
 <form method="post" class="form-horizontal" id="password-update-form" action="?reset-password#password">
 
