setting autocomplete attribute to false in password fields

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/email-verification/email-verification.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/email-verification/email-verification.hbs
@@ -6,7 +6,7 @@
                 <span class="requiredAstrix"> *</span></label>
             <div class="form-group form-inline">
                 <input type="password" name="newPassword" id="newPassword" class="form-control"
-                       required data-schemaformat="password" placeholder="Password"/>
+                       required data-schemaformat="password" placeholder="Password" autocomplete="off"/>
 
 
                 <input class="btn btn-primary add-margin-bottom-3x" type="button" name="generatePassword"
@@ -17,7 +17,7 @@
                 <label class="control-label" for="confirmPassword">{{i18n "users.confirm.password"}}
                     <span class="requiredAstrix"> *</span></label>
                 <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
-                       required data-schemaformat="password"/>
+                       required data-schemaformat="password" autocomplete="off"/>
             </div>
 
             <div class="form-group">
