--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/password-generation/password-generation.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/password-generation/password-generation.hbs
@@ -9,7 +9,7 @@
                 <div class="form-group">
                     <div class="col-md-6">
                         <input type="password" name="newPassword" id="newPassword" class="form-control"
-                               required data-schemaformat="password" placeholder="Password"/>
+                               required data-schemaformat="password" placeholder="Password" autocomplete="off"/>
                             <div id="passwordValidationError" style="display: none;">
                                 <label id="passwordValidation-error" class="error" for="passwordValidation-error">
                                     {{i18n "user.add.password.validate.error"}}</label>
@@ -46,7 +46,7 @@
                         <label class="control-label" for="confirmPassword">{{i18n "users.confirm.password"}}
                             <span class="requiredAstrix"> *</span></label>
                         <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
-                               required data-schemaformat="password"/>
+                               required data-schemaformat="password" autocomplete="off"/>
                     </div>
                 </div>
             </div>
