--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -46,7 +46,8 @@
             <div class="form-group">
                 <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                     <label class="control-label" for="old-password">{{i18n "security.question.label.password"}}<span>*</span></label>
-                    <input type="password" class="form-control" id="old-password" name="old-password" required/>
+                    <input type="password" class="form-control" id="old-password" name="old-password"
+                           required autocomplete="off"/>
                 </div>
             </div>
             <input type="hidden" name="action" value="check-password">
