--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -94,7 +94,7 @@
                                             <label class="control-label" for="password">{{i18n "signup.password"}}
                                                 <span>*</span></label></br>
                                             <input type="password" name="password" id="password"
-                                                   class="form-control"
+                                                   class="form-control" autocomplete="off"
                                                    data-schemaformat="password" required/>
 
                                             <div id="password_strength_wrap">
@@ -135,7 +135,7 @@
                                                for="confirmPassword">{{i18n "password.reset.new.confirm"}}
                                             <span>*</span></label>
                                         <input type="password" name="confirmPassword" id="confirmPassword"
-                                               class="form-control" required/>
+                                               class="form-control" required autocomplete="off"/>
                                     </div>
                                 </div>
 
