--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.hbs
@@ -73,7 +73,7 @@
                                     <label for="password" class="control-label">{{i18n "password"}}</label>
 
                                     <div class="input-group input-wrap">
-                                        <input type="password" name="password" class="form-control" id="password">
+                                        <input type="password" name="password" class="form-control" id="password" autocomplete="off">
                                     </div>
                                 </div>
                             </div>
