--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/password-reset.hbs
@@ -43,14 +43,15 @@
                                 <div class="form-group add-margin-top-5x">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <label for="input-pass" class="control-label">{{i18n "password"}}</label>
-                                        <input type="password" class="form-control" id="input-pass" name="input-password">
+                                        <input type="password" class="form-control" id="input-pass"
+                                               name="input-password" autocomplete="off">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                                         <label for="input-confirm-pass" class="control-label">
                                             {{i18n "password.reset.new.confirm"}}</label>
-                                        <input type="password" class="form-control" id="input-confirm-pass">
+                                        <input type="password" class="form-control" id="input-confirm-pass" autocomplete="off">
                                     </div>
                                 </div>
                                 <div class="form-group add-margin-top-5x">
