Fixing internationalization issues

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.hbs
@@ -7,14 +7,17 @@
     <p>{{i18n "password.info.body"}}</p>
 </div>
 {{#if success}}
+    {{#if message}}
     <div class="alert alert-success alert-dismissible fade in" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
         <i class="icon fw fw-success"></i>
-        {{message}}
+        {{i18n message}}
     </div>
+    {{/if}}
 {{else}}
+    {{#if message}}
     <div class="alert alert-danger" role="alert">
         {{i18n message number}}
         <button type="errorButton" class="close" aria-label="close" data-dismiss="alert">
@@ -23,6 +26,7 @@
         </span>
         </button>
     </div>
+    {{/if}}
 {{/if}}
 <form method="post" class="form-horizontal" id="password-update-form" action="?reset-password#password">
 
