Revert "Merge branch 'M5-UI-Tests' of https://github.com/GDRDABARERA/product-is into M5-Story5986"
This reverts commit dc3e5c5c012c5056d9f3f9765851a37de249b412, reversing
changes made to 2e763fb42a2f967e4a00afa1ebfc6b8e36cfd2f4.

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/username.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/recovery/username.hbs
@@ -65,8 +65,8 @@
                                 </div>
                                 <div class="form-group add-margin-top-5x">
                                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                        <button type="submit" class="btn btn-default btn-primary add-margin-right-2x" id="recover">{{i18n "recover"}}</button>
-                                        <a href="{{@contextPath}}/" class="hidden-xs hidden-sm" id="back-sign-in">{{i18n "back.sign.in"}}</a>
+                                        <button type="submit" class="btn btn-default btn-primary add-margin-right-2x">{{i18n "recover"}}</button>
+                                        <a href="{{@contextPath}}/" class="hidden-xs hidden-sm">{{i18n "back.sign.in"}}</a>
                                         <!--<a href="/login" class="visible-xs visible-sm add-margin-2x text-center">Back to sign in</a>-->
                                     </div>
                                 </div>
