--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/edit.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/edit.hbs
@@ -44,45 +44,7 @@
                             <div class="tab-content">
                                 <div class="tab-pane fade in active" id="editProfile">
                                     <!-- The all-profile fragment is loaded-->
-                                    <div>
-
-                                        <br class="settings-content">
-
-                                        {{fragment "org.wso2.carbon.iam.portal.common.profile-image" profileName=this
-                                                   actionId=actionId}}
-                                        <br>
-                                        <div id="profile-details">
-                                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 form-group">
-                                                <select class="selectpicker form-control"
-                                                        id="profileSelector">
-                                                    {{#each profiles}}
-                                                        <option id="option-profile"
-                                                                action="{{this}}-profile-action"
-                                                                value="{{this}}">{{this}}</option>
-                                                    {{/each}}
-                                                </select>
-                                            </div>
-                                            <br>
-                                            <br>
-                                            <br>
-                                            {{#defineZone "veiwProfileArea"}}
-                                                <div id="veiwProfileArea" class="veiwProfileArea">
-                                                    <!-- Here is generated content for erro when user already exists -->
-                                                    {{#each profiles}}
-                                                        <div id="{{this}}-form"
-                                                             class="{{this}} optionBox">
-                                                            {{fragment
-                                                                    "org.wso2.carbon.iam.portal.common.profile-details"
-                                                                    profileName=this
-                                                                    actionId=actionId}}
-                                                        </div>
-                                                    {{/each}}
-
-                                                </div>
-                                            {{/defineZone}}
-
-                                        </div>
-                                    </div>
+                                    {{fragment "org.wso2.carbon.iam.portal.common.all-profiles"}}
                                 </div>
                                 <div class="tab-pane " id="editGroups">
                                     <div>
@@ -96,12 +58,12 @@
 
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
