Resolved PR comments

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
@@ -12,8 +12,9 @@
             <div class="form-group">
                 <label class="control-label">{{i18n "confirm.users.email.address"}}
                     <span class="requiredAstrix"> *</span></label>
-                <input  type="email" class="form-control email" id="askPwdDuplicateEmail" name="askPwdDuplicateEmail"
-                        placeholder="retype - example@mail.com">
+                <input type="email" class="form-control email" id="askPwdDuplicateEmail"
+                       name="askPwdDuplicateEmail"
+                       placeholder={{i18n "sample.email.address"}}>
             </div>
 
         </div>
