--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
@@ -6,7 +6,7 @@
                 <label class="control-label">{{i18n "users.email.address"}}
                     <span class="requiredAstrix"> *</span></label>
                 <input type="email" class="form-control email" id="askPwdEmail" name="askPwdEmail"
-                       placeholder="example@mail.com">
+                       placeholder={{i18n "sample.email.address"}}>
             </div>
 
             <div class="form-group">
